# speech_recognize

./: .gitignore  Dockerfile  README.md  main.py  pyproject.toml  requirements.txt
src/: api.py
src/resoursces/employee/: response_1769071047288.json  응답.json
src/resoursces/models/iic/speech_eres2net_base_sv_zh-cn_3dspeaker_16k/: .mdl  .msc  .mv  README.md  configuration.json
src/resoursces/test/: test.ipynb  test.py
src/v1/: main.py  router.py
src/v1/utils/: json_paser.py  kr_tag.py
