[project]
name = "speech-recognize-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "addict>=2.4.0",
    "aiohttp>=3.13.3",
    "datasets>=4.5.0",
    "fastapi>=0.128.0",
    "huggingface-hub>=1.3.3",
    "librosa>=0.11.0",
    "modelscope>=1.34.0",
    "numpy>=2.0.2",
    "pandas>=2.3.3",
    "pillow>=11.3.0",
    "python-multipart>=0.0.20",
    "requests>=2.32.5",
    "soundfile>=0.13.1",
    "torch>=2.1.0",
    "torchaudio>=2.1.0",
    "torchvision>=0.16.0",
    "tqdm>=4.67.1",
    "uvicorn>=0.39.0",
]
